[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/enemies/Seagull/1cb42c1a8b504c8be69d8fc6bfed2ae8youlYYNCxcYAQenQ-8.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/Seagull/1cb42c1a8b504c8be69d8fc6bfed2ae8youlYYNCxcYAQenQ-2.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/Seagull/1cb42c1a8b504c8be69d8fc6bfed2ae8youlYYNCxcYAQenQ-6.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/Seagull/1cb42c1a8b504c8be69d8fc6bfed2ae8youlYYNCxcYAQenQ-0.png" type="Texture" id=4]
[ext_resource path="res://assets/enemies/Seagull/1cb42c1a8b504c8be69d8fc6bfed2ae8youlYYNCxcYAQenQ-11.png" type="Texture" id=5]
[ext_resource path="res://assets/enemies/Seagull/1cb42c1a8b504c8be69d8fc6bfed2ae8youlYYNCxcYAQenQ-13.png" type="Texture" id=6]
[ext_resource path="res://assets/enemies/Seagull/1cb42c1a8b504c8be69d8fc6bfed2ae8youlYYNCxcYAQenQ-14.png" type="Texture" id=7]
[ext_resource path="res://assets/enemies/Seagull/1cb42c1a8b504c8be69d8fc6bfed2ae8youlYYNCxcYAQenQ-9.png" type="Texture" id=8]
[ext_resource path="res://assets/enemies/Seagull/1cb42c1a8b504c8be69d8fc6bfed2ae8youlYYNCxcYAQenQ-1.png" type="Texture" id=9]
[ext_resource path="res://seagull.gd" type="Script" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 145, 134 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 142.5, 7.25004 )

[node name="seagull" type="KinematicBody2D"]
scale = Vector2( 0.2, 0.2 )
collision_layer = 8
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.52588e-05, -1 )
scale = Vector2( 0.43399, 0.44651 )
frames = SubResource( 1 )
frame = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -13, -2 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="top_checker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( -12.5, -147.75 )
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
